<resources>
    <string name="app_name">Trollo</string>

    <string name="search">search</string>
    <string name="plus">+</string>
    <string name="info">…</string>
    <string name="main_title">My Tasks</string>
    <string name="item_title">Title</string>
    <string name="item_description">Description</string>
    <string name="item_due_date">Due Date</string>
    <string name="cancel">Cancel</string>
    <string name="add">Add</string>

    <string name="info_center">Information\nCenter</string>
    <string name="about_app">About This App</string>
    <string name="faq">FAQ</string>
    <string name="help">Help</string>

    <string name="add_task">Add Task</string>
    <string name="update_task">Update Task</string>

    <string name="title_error">Please enter title</string>
    <string name="description_error">Please enter description</string>
    <string name="due_date_error_1">Please enter due date</string>
    <string name="due_date_error_2">Please use date format: DD/MM/YYYY</string>

    <string name="notification_title">New Task Added!</string>
    <string name="notification_content">Looking lively! Don\'t forget to check on your other tasks!</string>

    <string name="task_inputted">Task has been successfully inputted</string>
    <string name="task_deleted">Task has been removed</string>

    <string name="app_desc">This is a to do list app</string>

    <string name="question">No question asked</string>
    <string name="question2">This app is good enough as it is</string>

    <string name="sorry">Sorry, we can\'t help you</string>
</resources>