<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/info_menu_back"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_alignParentEnd="true"
        android:src="@drawable/icon_back"
        android:layout_marginTop="40dp"
        android:layout_marginStart="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="100dp"
        android:text="@string/info_center"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textFontWeight="600"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:targetApi="p" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="100dp"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <Button
            android:id="@+id/about_button"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginStart="21dp"
            android:layout_marginTop="21dp"
            android:layout_marginEnd="21dp"
            android:layout_marginBottom="21dp"
            android:background="@drawable/button_press_dark"
            android:text="@string/about_app"
            android:textSize="20sp" />
        <Button
            android:id="@+id/faq_button"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginStart="21dp"
            android:layout_marginTop="21dp"
            android:layout_marginEnd="21dp"
            android:layout_marginBottom="21dp"
            android:background="@drawable/button_press_dark"
            android:text="@string/faq"
            android:textSize="20sp" />
        <Button
            android:id="@+id/help_button"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginStart="21dp"
            android:layout_marginTop="21dp"
            android:layout_marginEnd="21dp"
            android:layout_marginBottom="21dp"
            android:background="@drawable/button_press_dark"
            android:text="@string/help"
            android:textSize="20sp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>