<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    android:background="@color/mainbackground"
    tools:context=".ui.taskList.TaskListActivity">

    <TextView
        android:id="@+id/form_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="20dp"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textFontWeight="600"
        tools:hint="@string/add_task"
        tools:targetApi="p" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:background="@drawable/bgadd"
        android:layout_marginHorizontal="20dp"
        android:orientation="vertical">
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:layout_marginStart="20dp"
                    android:text="@string/item_title"
                    android:textSize="12sp"
                    android:fontFamily="@font/poppins_bold"
                    android:textColor="@color/maintext"
                    />
                <EditText
                    android:id="@+id/judul"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:background="@drawable/bgtitle"
                    android:hint="@string/item_title"
                    android:inputType="text"
                    android:padding="8dp"
                    android:minHeight="48dp"
                    android:textSize="12sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="20dp"
                    android:text="@string/item_desc"
                    android:textSize="12sp"
                    android:fontFamily="@font/poppins_bold"
                    android:textColor="@color/maintext"
                    />
                <EditText
                    android:id="@+id/deskripsi"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:background="@drawable/bgdeskripsi"
                    android:hint="@string/item_desc"
                    android:inputType="text"
                    android:padding="8dp"
                    android:textSize="12sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="20dp"
                    android:text="@string/item_due_date"
                    android:textSize="12sp"
                    android:fontFamily="@font/poppins_bold"
                    android:textColor="@color/maintext"
                    />
                <EditText
                    android:id="@+id/deadline"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:background="@drawable/bgtitle"
                    android:hint="@string/item_due_date"
                    android:inputType="date"
                    android:minHeight="48dp"
                    android:padding="8dp"
                    android:textSize="12sp" />
            </LinearLayout>
        </FrameLayout>
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/confirm_add_button"
                    android:layout_width="120dp"
                    android:layout_height="30dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginHorizontal="140dp"
                    android:layout_marginVertical="15dp"
                    android:background="@drawable/kotakdelete"
                    android:paddingTop="3dp"
                    android:textAlignment="center"
                    android:layout_centerVertical="true"
                    android:textColor="@color/white"
                    android:textSize="12sp"
                    tools:hint="@string/add_task" />
            </RelativeLayout>
        </FrameLayout>
    </LinearLayout>

</LinearLayout>